# FileOpTrace

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
docs/: Doxyfile.in  Index.md
src/: CMakeLists.txt  bpf.cpp  frontend.cpp  logger.h  main.cpp  pipelogger.h  ptrace.cpp  ptrace.h  stdlogger.cpp  stdlogger.h  syscall.cpp  syscall.h  test.cpp
src/main/: CMakeLists.txt  bpf.cpp  bpf.h  frontend.cpp  frontend.h  logger.h  main.cpp  pipelogger.cpp  pipelogger.h  ptrace.cpp  ptrace.h  stdlogger.cpp  stdlogger.h  syscall.cpp  syscall.h
src/testbuddy/: CMakeLists.txt  testbuddy.cpp
src/tests/: CMakeLists.txt  test.cpp  testhandler.cpp  testhandler.h  testlogger.cpp  testlogger.h
